<?xml version="1.0"?>
<package format="2">
    <name>sweep_ros</name>
    <version>0.2.0</version>
    <description>The sweep_ros package</description>

    <maintainer email="support@scanse.io">Kent Williams</maintainer>

    <license>MIT</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>
    <depend>sensor_msgs</depend>
    <depend>rclcpp</depend>
    <depend>pcl_conversions</depend>
    <depend>pcl_msgs</depend>
    
    <exec_depend>pointcloud_to_laserscan</exec_depend>
    <exec_depend>boost</exec_depend>

    <export>
      <build_type>ament_cmake</build_type>
    </export>

    
    
    

</package>
